fix: allow terminal dark mode

--- a/assets/css/v-termynal.css
+++ b/assets/css/v-termynal.css
@@ -1,4 +1,4 @@
-:root {
+.terminal {
   --vt-color-bg: var(--color-slate-100);
   --vt-color-text: var(--color-slate-700);
   --vt-color-text-subtle: var(--color-slate-500);
@@ -6,7 +6,7 @@
   --vt-color-btn-hover: var(--color-slate-700);
 }
 
-html.dark {
+html.dark .terminal {
   --vt-color-bg: var(--color-slate-800);
   --vt-color-text: var(--color-slate-300);
   --vt-color-text-subtle: var(--color-slate-500);
